--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "discord.js": "^6.0.0",
-    "node-mysql": "^0.4.2"
+    "node-mysql": "^0.4.2",
+    "request": "^2.72.0"
   }
 }
