--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": "Polar",
   "license": "MIT",
   "dependencies": {
-    "discord.js": "^6.0.0",
+    "discord.io": "^1.11.1",
     "node-mysql": "^0.4.2",
     "request": "^2.72.0"
   }
